--- a/_data/home_callouts.yml
+++ b/_data/home_callouts.yml
@@ -1,12 +1,11 @@
 style: is-light
 items:
-  - title: Multiple page layouts
-    subtitle: Including sidebar, menubar, tabs and callouts
-    icon: fa-copy
-  - title: Blog included
-    subtitle: Layouts for blog and post pages included
-    icon: fa-mail-bulk
-  - title: Works with GitHub Pages
-    subtitle: Quick and easy to get started
-    icon: fa-github
-    icon_brand: true
+  - title: Centralized Repository
+    subtitle: All of your APIs in a single place
+    icon: fa-bars
+  - title: Integrations
+    subtitle: Possible to send updates from pipeline
+    icon: fa-circle-up
+  - title: Day-to-day tools
+    subtitle: Stored request, API versions, etc...
+    icon: fa-code-compare
